refactoring - use spring boot annotations etc